@startuml
class CreateProfileUI{
}
hide CreateProfileUI circle

class RegisterAccountUI{
}
hide RegisterAccountUI circle

class ChangeProfileUI{
}
hide ChangeProfileUI circle

class AccountListUI{
}
hide AccountListUI circle

class ChangeStatusUI{
}
hide ChangeStatusUI circle

class Repository{
-profileList
-accountList
+Repository()
+createNewProfile(name)
+saveProfile(profile)
+validateProfile(profile)
+addProfile(profile)
+registerAccount(name, email, phoneNumber,photo)
+doesEmailExist(email)
+changeProfile(email, profileName)
+isProfileValid(profileName)
+getProfile(profileName)
+getAccount(email)
+getListAllAccounts()
+changeStatus(email, status)
+isStatusValid(status)
-addAccount(account)
}
hide Repository circle

class Profile{
-profileName
+Profile(profileName)
+getProfile()
}
hide Profile circle

class Account {
-name
-email
-phoneNumber
-profile
-status
-photo
+Account(name, email, phoneNumber,photo)
+getEmail()
+changeStatus(status)
+updateProfile(profile)
}
hide Profile circle
hide Account circle

class CreateProfileController {
-repository
+CreateProfileController()
+createNewProfile(name)
+saveProfile()
}
hide CreateProfileController circle
hide AccountListController circle

class RegisterAccountController {
-repository
+RegisterAccountController()
+registerAccount(name, email, phoneNumber,photo)


}
hide RegisterAccountController circle

class ChangeProfileController {
-repository
+ChangeProfileController()
+changeProfile(email,profileName,photo)
}
hide ChangeProfileController circle

class AccountListController{
-repository
+AccountListController()
+getListAllAccounts()
}

class ChangeStatusController{
-account
-repository
+ChangeStatusController()
+changeStatus(email, status)
}
hide ChangeStatusController circle

CreateProfileUI ..>  CreateProfileController: requests
RegisterAccountUI ..>  RegisterAccountController: requests
ChangeProfileUI ..> ChangeProfileController: requests
AccountListUI ..> AccountListController: requests
ChangeStatusUI ..> ChangeStatusController: requests

CreateProfileController ..> Repository
RegisterAccountController ..> Repository
ChangeProfileController ..> Repository
AccountListController ..> Repository
ChangeStatusController ..> Repository

Repository --> Profile: creates
Repository --> Account: creates



@enduml